# pyreadme-right

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml
pyreadme_right/: VERSION  __init__.py  __main__.py  command_runner.py
tests/: test_readme_commands.py  test_readme_python_commands.py  test_version.py
